--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -32,6 +32,8 @@
 
     .menu-top-item .menu-top-content {
         width: 100%;
+        text-align: left;
+        padding-left: 5px;
     }
 
     .menu-top-content .button--subcribe {
