--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -342,6 +342,7 @@
         position: relative;
         display: flex;
         align-items: center;
+        margin: 0 auto;
     }
 
     .menu-search form {
